[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jobrunner-git"
dynamic = ["version"]
description = "shell-jobrunner plugin to provide \"project plugin\" context from git repos"
readme = "README.rst"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: Terminals",
    "Topic :: System :: Shells",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wwade/jobrunner-git"
Source = "https://github.com/wwade/jobrunner-git"

[project.entry-points."wwade.jobrunner"]
jobrunner_git_project = "jobrunner_git.project"

[dependency-groups]
dev = [
    "modernize==0.8.0",
    "mypy==1.19.1",
    "ruff==0.15.6",
    "pytest==8.4.2; python_version == '3.9'",
    "pytest==9.0.2; python_version >= '3.10'",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "PL"]
